--- a/index.html
+++ b/index.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 	<head>
-		<title>TESTING WITH THREE JS</title>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>THREE JS - MULTIPLE</title>
 		<script type="module" src="./dist/bundle.js"></script>
 	</head>
 	<body>
 		<canvas
-			id="canvas1"
-			style="background-color: black; width: 100%; height: 100%"
+			id="canvas"
+			style="background: black; height: 100%; width: 100%"
 		></canvas>
 	</body>
 </html>
