--- a/index.html
+++ b/index.html
@@ -4,13 +4,29 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>THREE JS - MULTIPLE</title>
-		<script type="module" src="./dist/bundle.js"></script>
+		<title>ARJS - THREE JS</title>
+		<style>
+			* {
+				padding: 0;
+				margin: 0;
+				box-sizing: border-box;
+			}
+			BODY,
+			HTML {
+				width: 100%;
+				height: 100%;
+				overflow: hidden;
+			}
+			#canvasOne {
+				height: 100%;
+				width: 100%;
+				overflow: hidden;
+				background-color: black;
+			}
+		</style>
 	</head>
 	<body>
-		<!-- <canvas
-			id="canvas"
-			style="background: black; height: 100%; width: 100%"
-		></canvas> -->
+		<canvas id="canvasOne"></canvas>
+		<script src="./dist/bundle.js"></script>
 	</body>
 </html>
