--- a/index.html
+++ b/index.html
@@ -4,29 +4,80 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>ARJS - THREE JS</title>
+		<title>A-Frame - LBAR</title>
+		<script src="https://aframe.io/releases/1.3.0/aframe.min.js"></script>
+		<script
+			type="text/javascript"
+			src="https://raw.githack.com/AR-js-org/AR.js/master/three.js/build/ar-threex-location-only.js"
+		></script>
+		<script
+			type="text/javascript"
+			src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"
+		></script>
 		<style>
 			* {
 				padding: 0;
 				margin: 0;
 				box-sizing: border-box;
 			}
-			BODY,
-			HTML {
+			#scene {
 				width: 100%;
 				height: 100%;
 				overflow: hidden;
-			}
-			#canvasOne {
-				height: 100%;
-				width: 100%;
-				overflow: hidden;
-				background-color: black;
 			}
 		</style>
 	</head>
 	<body>
-		<canvas id="canvasOne"></canvas>
-		<script src="./dist/bundle.js"></script>
+		<a-scene
+			stats="true"
+			id="scene"
+			vr-mode-ui="enabled: false"
+			arjs="sourceType: webcam; videoTexture: true; debugUIEnabled: false"
+			renderer="antialias: true; alpha: true"
+		>
+			<a-camera
+				look-controls-enabled="false"
+				arjs-look-controls="smoothingFactor: 0.1"
+				gps-new-camera="simulateLatitude:-6.601399076357021; simulateLongitude: 106.80582485626724; gps-distance: 0"
+				rotation-reader
+			></a-camera>
+			<a-assets>
+				<a-asset-item
+					id="bdsTuguKujang"
+					src="/src/models/bds-tugu-kujang.glb"
+				></a-asset-item>
+				<a-asset-item
+					id="mallBotaniSquare"
+					src="/src/models/mall-botani-square.glb"
+				></a-asset-item>
+				<a-asset-item
+					id="tuguKujang"
+					src="/src/models/tugu-kujang.glb"
+				></a-asset-item>
+			</a-assets>
+			<a-gltf-model
+				src="#bdsTuguKujang"
+				scale="1 1 1"
+				rotation="0 0 0"
+				look-at="[gps-camera]"
+				gps-new-entity-place="latitude:-6.601471714351664;longitude:106.8048409815005"
+				animation="property: rotation; to: 0 360 0; dur: 50000; easing: linear; loop: true"
+			></a-gltf-model>
+			<a-gltf-model
+				src="#mallBotaniSquare"
+				scale="1 1 1"
+				rotation="0 0 0"
+				gps-new-entity-place="latitude:-6.601393740337289;longitude:106.8068655154671"
+				animation="property: rotation; to: 0 360 0; dur: 50000; easing: linear; loop: true"
+			></a-gltf-model>
+			<a-gltf-model
+				src="#tuguKujang"
+				scale="1 1 1"
+				rotation="0 0 0"
+				gps-new-entity-place="latitude: -6.601180586224578;longitude:106.80509525758612"
+				animation="property: rotation; to: 0 360 0; dur: 50000; easing: linear; loop: true"
+			></a-gltf-model>
+		</a-scene>
+		<script></script>
 	</body>
 </html>
