fix: path sources model

--- a/index.html
+++ b/index.html
@@ -44,15 +44,15 @@
 			<a-assets>
 				<a-asset-item
 					id="bdsTuguKujang"
-					src="/src/models/bds-tugu-kujang.glb"
+					src="./src/models/bds-tugu-kujang.glb"
 				></a-asset-item>
 				<a-asset-item
 					id="mallBotaniSquare"
-					src="/src/models/mall-botani-square.glb"
+					src="./src/models/mall-botani-square.glb"
 				></a-asset-item>
 				<a-asset-item
 					id="tuguKujang"
-					src="/src/models/tugu-kujang.glb"
+					src="./src/models/tugu-kujang.glb"
 				></a-asset-item>
 			</a-assets>
 			<a-gltf-model
