--- a/index.html
+++ b/index.html
@@ -34,10 +34,7 @@
 			arjs="sourceType: webcam; videoTexture: true; debugUIEnabled: false;"
 			renderer="antialias: true; alpha: true"
 		>
-			<a-camera
-				gps-camera="simulateLatitude:-6.601399076357021; simulateLongitude: 106.80582485626724; gps-distance: 0"
-				rotation-reader
-			></a-camera>
+			<a-camera gps-camera="gps-distance: 0" rotation-reader></a-camera>
 			<a-assets>
 				<a-asset-item
 					id="bdsTuguKujang"
