--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>A-Frame - LBAR</title>
+		<title>LBAR - Tugu Kujang Bogor</title>
 		<script src="https://aframe.io/releases/1.3.0/aframe.min.js"></script>
 		<script
 			type="text/javascript"
