--- a/index.html
+++ b/index.html
@@ -76,9 +76,8 @@
 					src="./src/models/tugu-kujang.glb"
 				></a-asset-item>
 			</a-assets>
-
+			<a-entitiy class="" look-at="[gps-camera]"></a-entitiy>
 			<a-video
-				play-video
 				src="#footageBogor"
 				width="16"
 				height="9"
