--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 			}
 		</style>
 		<script>
-			AFRAME.registerComponent("play-video", {
+			AFRAME.registerComponent("ansjknas", {
 				init: function () {
 					const footageBogorVideo = document.getElementById("footageBogor");
 					const canvas = document.getElementsByClassName("a-canvas");
@@ -78,6 +78,7 @@
 			</a-assets>
 			<a-entitiy class="" look-at="[gps-camera]"></a-entitiy>
 			<a-video
+				ansjknas
 				src="#footageBogor"
 				width="16"
 				height="9"
