--- a/index.html
+++ b/index.html
@@ -60,10 +60,7 @@
 			arjs="sourceType: webcam; videoTexture: true; debugUIEnabled: false;"
 			renderer="antialias: true; alpha: true"
 		>
-			<a-camera
-				gps-camera="simulateLatitude:-6.602070480358665;simulateLongitude:106.80296018864688;gpsMinDistance:50"
-				rotation-reader
-			>
+			<a-camera gps-camera="gpsMinDistance:0" rotation-reader>
 				<a-cursor></a-cursor>
 			</a-camera>
 
