remove mall botani and kebun raya bogor location

--- a/index.html
+++ b/index.html
@@ -80,18 +80,18 @@
 					id="meseumZoologi"
 					src="./src/models/meseum-zoologi.glb"
 				></a-asset-item>
-				<a-asset-item
+				<!-- <a-asset-item
 					id="kebunRayaBogor"
 					src="./src/models/kebun-raya-bogor.glb"
-				></a-asset-item>
+				></a-asset-item> -->
 				<a-asset-item
 					id="bdsTuguKujang"
 					src="./src/models/bds-tugu-kujang.glb"
 				></a-asset-item>
-				<a-asset-item
+				<!--<a-asset-item
 					id="mallBotaniSquare"
 					src="./src/models/mall-botani-square.glb"
-				></a-asset-item>
+				></a-asset-item> -->
 				<a-asset-item
 					id="tuguKujang"
 					src="./src/models/tugu-kujang.glb"
