--- a/index.html
+++ b/index.html
@@ -28,30 +28,6 @@
 				overflow: hidden;
 			}
 		</style>
-		<script>
-			AFRAME.registerComponent("footage-kebun-raya-bogor-video", {
-				init: function () {
-					this.el.addEventListener("click", function () {
-						const footageKebunRayaBogorVideo = document.getElementById(
-							"footageKebunRayaBogor"
-						);
-						const isVideoPaused = footageKebunRayaBogorVideo.paused;
-						isVideoPaused
-							? footageKebunRayaBogorVideo.play()
-							: footageKebunRayaBogorVideo.pause();
-					});
-				},
-			});
-			AFRAME.registerComponent("footage-bogor-video", {
-				init: function () {
-					const footageBogorVideo = document.getElementById("footageBogor");
-					this.el.addEventListener("click", function () {
-						const isVideoPaused = footageBogorVideo.paused;
-						isVideoPaused ? footageBogorVideo.play() : footageBogorVideo.pause();
-					});
-				},
-			});
-		</script>
 	</head>
 	<body>
 		<a-scene
@@ -65,7 +41,7 @@
 			</a-camera>
 
 			<a-assets>
-				<video id="footageBogor" loop crossorigin="anonymous" webkit-playsinline>
+				<!--<video id="footageBogor" loop crossorigin="anonymous" webkit-playsinline>
 					<source src="./src/videos/footage-bogor.mp4" type="video/mp4" />
 				</video>
 				<video
@@ -76,6 +52,7 @@
 				>
 					<source src="./src/videos/footage-kebun-raya.mp4" type="video/mp4" />
 				</video>
+				-->
 				<a-asset-item
 					id="meseumZoologi"
 					src="./src/models/meseum-zoologi.glb"
@@ -98,7 +75,7 @@
 				></a-asset-item>
 			</a-assets>
 
-			<a-video
+			<!-- <a-video
 				footage-bogor-video
 				src="#footageBogor"
 				width="16"
@@ -106,7 +83,7 @@
 				scale="25 25 25"
 				look-at="[gps-camera]"
 				position="0 230 0"
-				gps-entity-place="latitude: -6.601180586224578;longitude:106.80509525758612"
+				gps-entity-place="latitude:-6.601180586224578;longitude:106.80509525758612"
 			></a-video>
 			<a-video
 				footage-kebun-raya-bogor-video
@@ -116,55 +93,50 @@
 				scale="25 25 25"
 				look-at="[gps-camera]"
 				position="0 230 0"
-				gps-entity-place="latitude: -6.597362;longitude:106.799559"
+				gps-entity-place="latitude:-6.597362;longitude:106.799559"
 			></a-video>
+			
 
 			<a-gltf-model
 				src="#kebunRayaBogor"
 				scale="10 20 10"
 				look-at="[gps-camera]"
-				gps-entity-place="latitude:	-6.597362;longitude:106.799559"
-				animation="property: rotation; to: 0 360 0; dur: 100000; easing: linear; loop: true"
+				gps-entity-place="latitude:-6.597362;longitude:106.799559"
 			></a-gltf-model>
+			-->
 			<a-gltf-model
 				src="#meseumZoologi"
 				scale="10 20 10"
 				look-at="[gps-camera]"
-				gps-entity-place="latitude:	-6.603353;longitude:106.796876"
-				animation="property: rotation; to: 0 360 0; dur: 100000; easing: linear; loop: true"
+				gps-entity-place="latitude:-6.603353;longitude:106.796876"
 			></a-gltf-model>
 			<a-gltf-model
 				src="#bdsTuguKujang"
 				scale="10 20 10"
 				look-at="[gps-camera]"
 				gps-entity-place="latitude:-6.394210843382127;longitude:106.84644321137985"
-				animation="property: rotation; to: 0 360 0; dur: 100000; easing: linear; loop: true"
 			></a-gltf-model>
 			<a-gltf-model
 				src="#bdsTuguKujang"
 				scale="10 20 10"
 				look-at="[gps-camera]"
 				gps-entity-place="latitude:-6.394210843382127;longitude:106.84644321137985"
-				animation="property: rotation; to: 0 360 0; dur: 100000; easing: linear; loop: true"
 			></a-gltf-model>
 			<a-gltf-model
 				src="#bdsTuguKujang"
 				scale="10 20 10"
 				look-at="[gps-camera]"
 				gps-entity-place="latitude:-6.601471714351664;longitude:106.8048409815005"
-				animation="property: rotation; to: 0 360 0; dur: 100000; easing: linear; loop: true"
 			></a-gltf-model>
-			<a-gltf-model
+			<!--<a-gltf-model
 				src="#mallBotaniSquare"
 				scale="10 20 10"
 				gps-entity-place="latitude:-6.601393740337289;longitude:106.8068655154671"
-				animation="property: rotation; to: 0 360 0; dur: 100000; easing: linear; loop: true"
-			></a-gltf-model>
+			></a-gltf-model> -->
 			<a-gltf-model
 				src="#tuguKujang"
 				scale="10 20 10"
-				gps-entity-place="latitude: -6.601180586224578;longitude:106.80509525758612"
-				animation="property: rotation; to: 0 360 0; dur: 100000; easing: linear; loop: true"
+				gps-entity-place="latitude:-6.601180586224578;longitude:106.80509525758612"
 			></a-gltf-model>
 		</a-scene>
 	</body>
