--- a/index.html
+++ b/index.html
@@ -47,12 +47,7 @@
 			arjs="sourceType: webcam; videoTexture: true; debugUIEnabled: false;"
 			renderer="antialias: true; alpha: true"
 		>
-			<a-camera
-				look-controls-enabled="false"
-				arjs-look-controls="smoothingFactor: 0.1"
-				gps-camera="gpsMinDistance:30"
-				rotation-reader
-			>
+			<a-camera gps-camera="gpsMinDistance:30" rotation-reader>
 				<a-cursor></a-cursor>
 			</a-camera>
 			<a-assets>
