--- a/index.html
+++ b/index.html
@@ -80,19 +80,23 @@
 			<a-gltf-model
 				src="#meseumZoologi"
 				scale="0.5 1.5 0.5"
+				position="0 0 -15"
 				look-at="[gps-camera]"
 				gps-entity-place="latitude:-6.603353;longitude:106.796876"
 			></a-gltf-model>
 			<a-gltf-model
 				src="#bdsTuguKujang"
 				scale="0.5 1.5 0.5"
+				position="0 0 -15"
 				look-at="[gps-camera]"
-				gps-entity-place="latitude:-6.6014303761898905;longitude:106.80507178834485"
+				gps-entity-place="latitude:-6.6015022143523705;longitude:106.80483807024935"
 			></a-gltf-model>
 			<a-gltf-model
 				src="#tuguKujang"
 				scale="0.5 1.5 0.5"
-				gps-entity-place="latitude:-6.601180586224578;longitude:106.80509525758612"
+				position="0 0 -15"
+				look-at="[gps-camera]"
+				gps-entity-place="latitude:-6.6014276104397025;longitude:106.80507343407385"
 			></a-gltf-model>
 		</a-scene>
 	</body>
