update coordinate tugu kujang

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 				src="#tuguKujang"
 				position="0 50 -15"
 				look-at="[gps-camera]"
-				gps-entity-place="latitude:-6.601428481832426;longitude:106.80509273975836"
+				gps-entity-place="latitude:-6,6014230;longitude:106,8051940"
 			></a-gltf-model>
 		</a-scene>
 	</body>
