--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 				src="#tuguKujang"
 				position="0 50 -15"
 				look-at="[gps-camera]"
-				gps-entity-place="latitude:-6,6014230;longitude:106,8051940"
+				gps-entity-place="latitude:-6.6014230;longitude:106.8051940"
 			></a-gltf-model>
 		</a-scene>
 	</body>
