--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 			<a-video
 				footage-bogor-video
 				src="#footageBogor"
-				width="12"
+				width="10"
 				height="5"
 				scale="25 25 25"
 				look-at="[gps-camera]"
@@ -93,7 +93,7 @@
 				src="#tuguKujang"
 				position="0 50 -15"
 				look-at="[gps-camera]"
-				gps-entity-place="latitude:-6.601441;longitude:106.805071"
+				gps-entity-place="latitude:-6.6014370306476255;longitude:106.80507379518764"
 			></a-gltf-model>
 		</a-scene>
 	</body>
